# --
# Changes of OTRS
# Copyright (C) 2001-2005 Martin Edenhofer <martin+code@otrs.org>
# --
# $Id: CHANGES,v 1.209.2.12 2005-12-20 22:49:11 martin Exp $
# --
# This software comes with ABSOLUTELY NO WARRANTY. For details, see
# the enclosed file COPYING for license information (GPL). If you
# did not receive this file, see http://www.gnu.org/licenses/gpl.txt.
# --
2.0.5 (2005/??/??)
 - (2005/12/20) improved die if xml is invalid in Kernel/System/XML.pm
 - (2005/12/12) added compat config option for compose answer to
    replace original sender with current customers email address
 - (2005/11/19) updated French language file, thanks to Yann Richard
 - (2005/12/04) fixed bug #1025 - ORA-01400: cannot insert NULL into ("OTRS"
    ."CUSTOMER_USER"."COMMENTS"
 - (2005/12/04) fixed bug #1018 - initial_insert.sql, oracle error ORA-01400:
    cannot insert NULL into
 - (2005/12/03) fixed std attachment feature (no attachment after
    additional fiel upload) in agent ticket compose
 - (2005/12/01) improved database Quote() for integer, also allow +|-
    in integer
 - (2005/11/30) fixed order of create attributes (TicketCreate(), TicketFreeTime(),
    TicketFreeTime(), ArticleCreate(), ...) on customer ticket creation
 - (2005/11/29) fixed bug #1010 - ORA-00972 Identifier is too long for oracle
 - (2005/11/29) fixed bug #1011 - ORA-01408: such column list already indexed,
    Oracle error
 - (2005/11/24) fixed wrong follow up notification (to all agents)
    via customer panel if ticket is already closed
 - (2005/11/19) updated Dutch language file, thanks to Richard Hinkamp
 - (2005/11/15) fixed not working -r option in scripts/backup.pl
    (-r == removed backups older then -r days)
 - (2005/11/13) remove leading and trailing spaces in ldap filter for
    agent and customer authentication

2.0.4 (2005/11/12)
 - (2005/11/11) fixed bug #695 - From-Header missing quoting if : is used
 - (2005/11/11) fixed bug #863 - error after using faq in tickets